# OnlineBattleTanksPygame

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
src/: Makefile  client.py  server.py  todo
src/application/: __init__.py  application.py  config.yml  containers.py  interfaces.py  states.py  window.py
src/game_objects/entity/: objects.py
src/game_objects/game_field/: game_field.py
src/game_objects/interfaces/: engine_objects.py  states.py
src/game_objects/tank/: tank.py
src/game_objects/utils/: spritesheet.py
src/network/: __init__.py  containers.py  network.py
